--- a/coin-crusade/style.css
+++ b/coin-crusade/style.css
@@ -1,171 +1,214 @@
-body {
-  background-image: url("https://i.postimg.cc/YSzhkbLX/Screenshot-2024-07-09-10-27-53.png");
-  background-size: 1450px 1150px;
-}
+body
+	background-image: url('https://i.postimg.cc/YSzhkbLX/Screenshot-2024-07-09-10-27-53.png')
+	background-size: 1450px 1150px
 
-h2 {
-  color: #666;
-  font-family: monospace;
-  text-align: center;
-}
+h2
+	color: #666
+	font-family: monospace
+	text-align: center
+	
+.background
+	table-layout: fixed
+	border-spacing: 0
+	
+.background td 
+	padding: 0
 
-.background {
-  table-layout: fixed;
-  border-spacing: 0;
-}
+.lava
+	background: #e55
 
-.background td {
-  padding: 0;
-}
+.actor
+	/* no background here */
 
-.lava, .actor {
-  background: #e55;
-}
 
-.wall {
-  background: #444;
-  border: solid 3px #333;
-  box-sizing: content-box;
-}
+.wall
+	background: #444
+	border: solid 3px #333
+	box-sizing: content-box
+	
+.actor
+	position: absolute
+	
+.coin
+	background: #e2e838
+	border-radius: 50%
+	
+.player
+	background: #335699
+	box-shadow: none
+	
+.lost .player 
+	background: #335699
 
-.actor {
-  position: absolute;
-}
-
-.coin {
-  background: #e2e838;
-  border-radius: 50%;
-}
-
-.player {
-  background: #335699;
-  box-shadow: none;
-}
-
-.lost .player {
-  background: #335699;
-}
-
-.won .player {
-  background: #335699;
-}
-
-.game {
-  position: relative;
-  overflow: hidden;
-}
-
+.won .player 
+	background: #335699
+	
+.game
+	position: relative
+	overflow: hidden
+	
 /* Add styles for buttons and moving platforms */
-.platform {
-  background: #444;
-  border: solid 3px #333;
-  box-sizing: content-box;
-}
+.platform 
+	background: #444
+	border: solid 3px #333
+	box-sizing: content-box
 
-.button {
-  background-color: green;
-}
+.button 
+	background-color: green
 
-.button.invisible {
-  background-color: transparent;
-}
 
-.Invis {
-  background-color: transparent;
-}
 
-.ghost {
-  background: #444;
-  border: solid 3px #333;
-  box-sizing: content-box;
-}
+.button.invisible 
+	background-color: transparent
 
-.Door {
-  background: #e55;
-}
+.Invis
+	background-color: transparent
+	
+.ghost
+	background: #444
+	border: solid 3px #333
+	box-sizing: content-box
+	
+	
+.Door
+	background: #e55
+	
+.Fakelava
+	background: #e55
+	
+.Fakecoin
+	background: #d1d730
+	border-radius: 50%
 
-.Fakelava {
-  background: #e55;
-}
+	
+	
+	
+.lavawall
+	background: #e55
 
-.Fakecoin {
-  background: #e2e838;
-  border-radius: 50%;
-}
+.block 
+	width: 100px /* Adjust width as needed */
+	height: 0px /* Adjust height as needed */
+	background-color: #222 /* Example color */
+	background-image: linear-gradient(to right, transparent calc(1px + 1%), black calc(3px + 1%), black calc(100% - 2px), transparent calc(100% - 2px))
+	background-size: 20px 100% /* Adjust size based on block width and number of blocks */
+	background-repeat: repeat
+	background-clip: content-box
+	clip-path: polygon(0% 70%, 100% 70%, 33% 100%, 100% 100%, 0% 100%, 100% 70%, 100% 100%, 0% 100%)
+	transform: scaleY(-1)
+	
+.block2 
+	width: 100px /* Adjust width as needed */
+	height: 0px /* Adjust height as needed */
+	background-color: #222 /* Example color */
+	background-image: linear-gradient(to right, transparent calc(1px + 1%), black calc(3px + 1%), black calc(100% - 2px), transparent calc(100% - 2px))
+	background-size: 20px 100% /* Adjust size based on block width and number of blocks */
+	background-repeat: repeat
+	background-clip: content-box
+	clip-path: polygon(0% 70%, 100% 70%, 33% 100%, 100% 100%, 0% 100%, 100% 70%, 100% 100%, 0% 100%)
 
-.lavawall {
-  background: #e55;
-}
+	
+	
+.block3 
+	width: 100px /* Adjust width as needed */
+	height: 0px /* Adjust height as needed */
+	background-color: #222 /* Example color */
+	background-image: linear-gradient(to right, transparent calc(1px + 1%), black calc(3px + 1%), black calc(100% - 2px), transparent calc(100% - 2px))
+	background-size: 20px 100% /* Adjust size based on block width and number of blocks */
+	background-repeat: repeat
+	background-clip: content-box
+	clip-path: polygon(0% 70%, 100% 70%, 33% 100%, 100% 100%, 0% 100%, 100% 70%, 100% 100%, 0% 100%)
+	transform: rotatez(90deg)
 
-.block {
-  width: 100px;
-  height: 0px;
-  background-color: #222;
-  background-image: linear-gradient(to right, transparent calc(1px + 1%), black calc(3px + 1%), black calc(100% - 2px), transparent calc(100% - 2px));
-  background-size: 20px 100%;
-  background-repeat: repeat;
-  background-clip: content-box;
-  clip-path: polygon(0% 70%, 100% 70%, 33% 100%, 100% 100%, 0% 100%, 100% 70%, 100% 100%, 0% 100%);
-  transform: scaleY(-1);
-}
+	
+	
+.block4
+	width: 100px /* Adjust width as needed */
+	height: 0px /* Adjust height as needed */
+	background-color: #222 /* Example color */
+	background-image: linear-gradient(to right, transparent calc(1px + 1%), black calc(3px + 1%), black calc(100% - 2px), transparent calc(100% - 2px))
+	background-size: 20px 100% /* Adjust size based on block width and number of blocks */
+	background-repeat: repeat
+	background-clip: content-box
+	clip-path: polygon(0% 70%, 100% 70%, 33% 100%, 100% 100%, 0% 100%, 100% 70%, 100% 100%, 0% 100%)
+	transform-origin: center
+	transform: rotatez(-90deg)
 
-.block2 {
-  width: 100px;
-  height: 0px;
-  background-color: #222;
-  background-image: linear-gradient(to right, transparent calc(1px + 1%), black calc(3px + 1%), black calc(100% - 2px), transparent calc(100% - 2px));
-  background-size: 20px 100%;
-  background-repeat: repeat;
-  background-clip: content-box;
-  clip-path: polygon(0% 70%, 100% 70%, 33% 100%, 100% 100%, 0% 100%, 100% 70%, 100% 100%, 0% 100%);
-}
+	
+	
+	
+	
+  
 
-.block3 {
-  width: 100px;
-  height: 0px;
-  background-color: #222;
-  background-image: linear-gradient(to right, transparent calc(1px + 1%), black calc(3px + 1%), black calc(100% - 2px), transparent calc(100% - 2px));
-  background-size: 20px 100%;
-  background-repeat: repeat;
-  background-clip: content-box;
-  clip-path: polygon(0% 70%, 100% 70%, 33% 100%, 100% 100%, 0% 100%, 100% 70%, 100% 100%, 0% 100%);
-  transform: rotatez(90deg);
-}
+  
 
-.block4 {
-  width: 100px;
-  height: 0px;
-  background-color: #222;
-  background-image: linear-gradient(to right, transparent calc(1px + 1%), black calc(3px + 1%), black calc(100% - 2px), transparent calc(100% - 2px));
-  background-size: 20px 100%;
-  background-repeat: repeat;
-  background-clip: content-box;
-  clip-path: polygon(0% 70%, 100% 70%, 33% 100%, 100% 100%, 0% 100%, 100% 70%, 100% 100%, 0% 100%);
-  transform-origin: center;
-  transform: rotatez(-90deg);
-}
+	
+	
+.player, .player2, .wall
+	z-index: 10 /* Higher value to ensure player is on top */
 
-.player, .player2, .wall {
-  z-index: 10;
-}
+.lava, .coin
+	z-index: 7 /* Higher value to ensure player is on top */
+	
+	
+	
+.lavawall, .ghost, .fakecoin, .platform, .button, .door, .onewayblock, .fakelava
+	z-index: 5 /* Lower value to ensure they are ehind the player */
+	
+.player2
+	background: green
+	box-shadow: none
+	
+	
 
-.lava, .coin {
-  z-index: 7;
-}
+.lost .player2
+	background: green
 
-.lavawall, .ghost, .fakecoin, .platform, .button, .door, .onewayblock, .fakelava {
-  z-index: 5;
-}
+.won .player2
+	background: green
+	
+	/* === PORTALS === */
 
-.player2 {
-  background: green;
-  box-shadow: none;
-}
+.orangePortal
+	background: radial-gradient(circle, #ff9d00 20%, #ff6a00 60%, #ff3c00 100%)
+	border: 3px solid #ffb347
+	border-radius: 50%
+	box-shadow: 0 0 15px #ff6a00, 0 0 30px #ff3c00
+	animation: portalSpin 2s linear infinite
 
-.lost .player2 {
-  background: green;
-}
+.bluePortal
+	background: radial-gradient(circle, #00aaff 20%, #0077ff 60%, #0044ff 100%)
+	border: 3px solid #66ccff
+	border-radius: 50%
+	box-shadow: 0 0 15px #0099ff, 0 0 30px #0044ff
+	animation: portalSpin 2s linear infinite reverse
 
-.won .player2 {
-  background: green;
-}
+.fakeOrangePortal
+	background: radial-gradient(circle, #aa5500 20%, #773300 60%, #552200 100%)
+	border: 3px dashed #aa5500
+	border-radius: 50%
+	opacity: 0.5
+	box-shadow: 0 0 5px #552200
+
+.fakeBluePortal
+	background: radial-gradient(circle, #004477 20%, #002255 60%, #001133 100%)
+	border: 3px dashed #004477
+	border-radius: 50%
+	opacity: 0.5
+	box-shadow: 0 0 5px #001133
+
+.greenPortal
+	background: radial-gradient(circle, #00ff88 20%, #00cc66 60%, #009944 100%)
+	border: 3px solid #00ff88
+	border-radius: 50%
+	box-shadow: 0 0 15px #00ff88, 0 0 30px #00cc66
+	animation: portalPulse 1.5s ease-in-out infinite
+	
+	
+	
+.purplePortal
+	background: radial-gradient(circle, #ae00ff 20%, #7a00cc 60%, #4d0088 100%)
+	border: 3px solid #d400ff
+	border-radius: 50%
+	box-shadow: 0 0 15px #d400ff, 0 0 30px #ae00ff, 0 0 45px #7a00cc
+	animation: portalPulse 1.5s ease-in-out infinite
